--- a/app/index.jade
+++ b/app/index.jade
@@ -22,7 +22,7 @@ html
       h3 if you want to turn any homepage into a brutalist homepage.
       p
       p
-        input(value="npm install brutalistcss")
+        input(value="npm install brutalist")
       p
         a(href='//github.com/reimertz/brutalistcss') github page
         span &nbsp;
