--- a/app/index.jade
+++ b/app/index.jade
@@ -24,7 +24,7 @@ html
       p
         input(value="npm install brutalist")
       p
-        a(href='//github.com/reimertz/brutalistcss') github page
+        a(href='//github.com/reimertz/brutalist.css') github page
         span &nbsp;
         a(href='//twitter.com/reimertz') made by @reimertz
 
